---------------------------------------------------------------------------------------------------
Version: 0.17.16
Date: 2019.11.20
  Change:
    - Utility sciecne pack now speed require module
	- Ingredients of module 
---------------------------------------------------------------------------------------------------
Version: 0.17.15
Date: 2019.11.19
  Change:
    - Science pack ingredients count now depent on settings in Krastorio
	- Ingredients of silicon wafer line
---------------------------------------------------------------------------------------------------
Version: 0.17.14
Date: 2019.11.17
  Change:
    - Ingredients of electronics group recipes
  Add:
    - New tier of wood production
---------------------------------------------------------------------------------------------------
Version: 0.17.13
Date: 2019.11.17
  Add:
	- Last game recipe to get more copper and iron 
  Change:
    - Ingredients of contruction kit and contruction package
---------------------------------------------------------------------------------------------------
Version: 0.17.12
Date: 2019.11.16
  Add:
	- Add contruction package for production and utility science pack
---------------------------------------------------------------------------------------------------
Version: 0.17.11
Date: 2019.11.13
  Fixed:
    - Move require file out of settings if (mismatch)
  Add:
	- Wood to coke recipe
---------------------------------------------------------------------------------------------------
Version: 0.17.10
Date: 2019.11.11
  Balanced:
    - Processing Circuit Board now also require Simple Circuit Board to craft
	- Military Science Kit now use less materials to craft
	- add ingredients to k-science-pack
  Graphics:
    - new Graphics Processor Array icon
---------------------------------------------------------------------------------------------------
Version: 0.17.9
Date: 2019.11.5
  Add:
    - support for Space Expension Mod
  Change:
    - rename tiered to layered